--- a/app/scss/abstract/variables.scss
+++ b/app/scss/abstract/variables.scss
@@ -1,14 +1,14 @@
 // Variables
 
 /** Colors  */
-$primary: #32cd32 !default;
+$primary: #D83A34 !default;
 $secondary: #22cccc !default;
 $error: #f42f2f !default;
 $dark-gray: #5E5C47 !default;
 $dark: #1E1B1C !default;
 $light: #EDEEE8 !default;
 $black: #000000 !default;
-$white: #FFFFFF !default;
+$white: #F8f8fb !default;
 
 /** Font Family  */
 $ff-sans-serif: 'Poppins', sans-serif;
