--- a/app/scss/layout/hero-section.scss
+++ b/app/scss/layout/hero-section.scss
@@ -20,8 +20,8 @@
     }
 
     .hero__image {
-        max-width: 400px;
+        max-width: 300px;
         border-radius: 50%;
-        filter: drop-shadow(-2px 8px 11px #62ff00);
+        filter: drop-shadow(-2px 8px 11px $primary);
     }
 }
