--- a/app/scss/layout/hero-section.scss
+++ b/app/scss/layout/hero-section.scss
@@ -22,6 +22,7 @@
     .hero__image {
         max-width: 300px;
         border-radius: 50%;
+        z-index: 1000;
         filter: drop-shadow(-2px 8px 11px $primary);
     }
 }
