--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -38,10 +38,18 @@
         filter: drop-shadow(-2px 8px 11px $primary);
         left: 0;
         visibility: hidden;
+
         a {
             width: 60px;
             height: 60px;
             font-size: rem(24);
+        }
+    }
+    .menu--hero__icon {
+        transition: 1s ease-in-out;
+        a.active {
+            background-color: #d83a34;
+            color: #f8f8fb; 
         }
     }
 }
