--- a/app/scss/layout/header.scss
+++ b/app/scss/layout/header.scss
@@ -1,20 +1,23 @@
 @use "abstract" as *;
 
 .header {
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 1001;
+
+  .overlay {
     position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 100;
-
-    .overlay {
-        position: fixed;
-        z-index: 2;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        top: rem(58);
-        background-image: linear-gradient(to bottom, lighten($primary, 20%), transparent);
-        cursor: pointer;
-
-    }
+    z-index: 2;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: rem(58);
+    background-image: linear-gradient(
+      to bottom,
+      lighten($primary, 20%),
+      transparent
+    );
+    cursor: pointer;
+  }
 }
