--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -95,6 +95,7 @@
             line-height: rem(65);
             font-size: rem(20);
             transition: 0.5s;
+            color: $primary;
           }
           .nav__link-text {
             position: absolute;
@@ -129,13 +130,37 @@
 
     .nav__indicator {
       position: absolute;
-      top: -50%;
+      top: -35px;
       width: rem(70);
       height: rem(70);
       background-color: $white;
       z-index: 1;
       transition: 0.5s;
       border-radius: 50%;
+      &::before {
+        content: "";
+        position: absolute;
+        top: rem(5);
+        left: rem(-28);
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        z-index: 1;
+        border-radius: 50%;
+        box-shadow: 15px 18px $white;
+      }
+      &::after {
+        content: "";
+        position: absolute;
+        top: rem(5);
+        right: rem(-28);
+        width: 30px;
+        height: 30px;
+        background-color: transparent;
+        z-index: 1;
+        border-radius: 50%;
+        box-shadow: -15px 18px $white;
+      }
     }
   }
 
