--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -61,15 +61,18 @@
 
     @include breakpoints-up("md") {
       visibility: visible;
-      height: auto;
       position: relative;
       width: 470px;
       height: 60px;
       display: flex;
-      background-color: $white;
       justify-content: center;
       align-items: center;
       border-radius: 10px;
+      background-color: $white;
+    }
+
+    @include breakpoints-up("lg") {
+      display: none;
     }
 
     .nav__lists {
@@ -79,8 +82,26 @@
       .nav__list {
         position: relative;
         width: rem(70);
-        height: rem(60);
-        z-index: 2;
+        height: rem(70);
+        z-index: 1;
+        &:nth-child(1).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 0));
+        }
+        &:nth-child(2).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 1));
+        }
+        &:nth-child(3).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 2));
+        }
+        &:nth-child(4).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 3));
+        }
+        &:nth-child(5).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 4));
+        }
+        &:nth-child(6).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(70px * 5));
+        }
         .nav__link {
           position: relative;
           display: flex;
@@ -89,16 +110,15 @@
           flex-direction: column;
           width: 100%;
           justify-content: center;
+          font-weight: 500;
+
           .nav__link-icon {
             position: relative;
             display: block;
-            line-height: rem(65);
-            font-size: rem(20);
+            line-height: rem(75);
+            font-size: 1.5em;
             transition: 0.5s;
-            color: $dark-gray;
-            &:hover {
-              color: $primary;
-            }
+            color: $primary;
           }
           .nav__link-text {
             position: absolute;
@@ -109,23 +129,22 @@
             font-weight: 400;
             font-size: 0.75em;
             letter-spacing: 0.05em;
-            transition: 1s ease-in-out;
+            transition: 0.5s ease-in-out;
             opacity: 0;
-            transform: translateY(15px);
+            transform: translateY(20px);
           }
         }
       }
 
       .nav__list--active {
         .nav__link {
-          color: $primary;
           .nav__link-icon {
             transform: translateY(-32px);
             opacity: 1;
-            color: $primary;
+            color: $white;
           }
           .nav__link-text {
-            transform: translateY(-4px);
+            transform: translateY(10px);
             opacity: 1;
           }
         }
@@ -134,42 +153,57 @@
 
     .nav__indicator {
       position: absolute;
-      top: -35px;
+      top: -50%;
       width: rem(70);
       height: rem(70);
-      background-color: $white;
-      z-index: 1;
-      transition: 0.5s;
+      background-color: $primary;
       border-radius: 50%;
+      border: 6px solid $black;
+      transition: 0.5s;
       &::before {
         content: "";
         position: absolute;
-        top: rem(5);
-        left: rem(-28);
-        width: 30px;
-        height: 30px;
+        top: 42%;
+        left: rem(-23);
+        width: 20px;
+        height: 20px;
         background-color: transparent;
-        z-index: 1;
-        border-radius: 50%;
-        box-shadow: 15px 18px $white;
+        border-top-right-radius: 20px;
+        box-shadow: 1px -10px 0 0 $black;
       }
       &::after {
         content: "";
         position: absolute;
-        top: rem(5);
-        right: rem(-28);
-        width: 30px;
-        height: 30px;
-        background-color: transparent;
+        top: 42%;
+        right: rem(-23);
+        width: 20px;
+        height: 20px;
         z-index: 1;
-        border-radius: 50%;
-        box-shadow: -15px 18px $white;
+        background-color: transparent;
+        border-top-left-radius: 20px;
+        box-shadow: -1px -10px 0 0 $black;
       }
     }
   }
 
   .nav__cta {
     letter-spacing: 1.5px;
+    display: none;
+    @include breakpoints-up("lg") {
+      display: inline-block;
+    }
+  }
+}
+
+.nav__list:not(.nav__list--active):hover {
+  .nav__link-icon {
+    color: $white;
+    transform: translateY(-32px);
+    opacity: 0;
+  }
+  .nav__link-text {
+    transform: translateY(0px) !important;
+    opacity: 1 !important;
   }
 }
 
