--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -158,7 +158,7 @@
       height: rem(70);
       background-color: $primary;
       border-radius: 50%;
-      border: 6px solid $black;
+      border: 6px solid $dark;
       transition: 0.5s;
       &::before {
         content: "";
@@ -169,7 +169,7 @@
         height: 20px;
         background-color: transparent;
         border-top-right-radius: 20px;
-        box-shadow: 1px -10px 0 0 $black;
+        box-shadow: 1px -10px 0 0 $dark;
       }
       &::after {
         content: "";
@@ -181,7 +181,7 @@
         z-index: 1;
         background-color: transparent;
         border-top-left-radius: 20px;
-        box-shadow: -1px -10px 0 0 $black;
+        box-shadow: -1px -10px 0 0 $dark;
       }
     }
   }
@@ -237,10 +237,41 @@
     background-color: $dark;
     padding: rem(20);
     border-radius: 5px;
-    width: rem(250);
     align-items: center;
     z-index: 3;
+    width: 100%;
     animation: opac 0.5s linear;
+    .nav__lists {
+      width: 100%;
+      justify-content: space-around;
+      .nav__list {
+        height: rem(55);
+        width: rem(55);
+        &:nth-child(1).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 0));
+        }
+        &:nth-child(2).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 1));
+        }
+        &:nth-child(3).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 2));
+        }
+        &:nth-child(4).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 3));
+        }
+        &:nth-child(5).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 4));
+        }
+        &:nth-child(6).nav__list--active ~ .nav__indicator {
+          transform: translateX(calc(55px * 5));
+        }
+        .nav__link-icon {
+        }
+      }
+      .nav__indicator {
+        display: none;
+      }
+    }
   }
 }
 
