--- a/app/scss/components/navbar.scss
+++ b/app/scss/components/navbar.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   position: relative;
+  padding-inline: 0 !important;
 
   .nav__brand {
     .nav__brand-image {
@@ -68,7 +69,8 @@
       justify-content: center;
       align-items: center;
       border-radius: 10px;
-      background-color: $white;
+      background-color: $black;
+      margin-top: rem(10);
     }
 
     @include breakpoints-up("lg") {
@@ -117,8 +119,11 @@
             display: block;
             line-height: rem(75);
             font-size: 1.5em;
-            transition: 0.5s;
+            // transition: 0.1s;
             color: $primary;
+            @include breakpoints-up("md") {
+              transition: 0.5s;
+            }
           }
           .nav__link-text {
             position: absolute;
@@ -129,9 +134,12 @@
             font-weight: 400;
             font-size: 0.75em;
             letter-spacing: 0.05em;
-            transition: 0.5s ease-in-out;
             opacity: 0;
             transform: translateY(20px);
+            // transition: 0.1s;
+            @include breakpoints-up("md") {
+              transition: 0.5s;
+            }
           }
         }
       }
@@ -139,12 +147,12 @@
       .nav__list--active {
         .nav__link {
           .nav__link-icon {
-            transform: translateY(-32px);
+            transform: translateY(-15px);
             opacity: 1;
             color: $white;
           }
           .nav__link-text {
-            transform: translateY(10px);
+            transform: translateY(20px);
             opacity: 1;
           }
         }
@@ -153,35 +161,15 @@
 
     .nav__indicator {
       position: absolute;
-      top: -50%;
-      width: rem(70);
-      height: rem(70);
+      top: -20%;
+      width: rem(60);
+      height: rem(60);
       background-color: $primary;
       border-radius: 50%;
-      border: 6px solid $dark;
-      transition: 0.5s;
-      &::before {
-        content: "";
-        position: absolute;
-        top: 42%;
-        left: rem(-23);
-        width: 20px;
-        height: 20px;
-        background-color: transparent;
-        border-top-right-radius: 20px;
-        box-shadow: 1px -10px 0 0 $dark;
-      }
-      &::after {
-        content: "";
-        position: absolute;
-        top: 42%;
-        right: rem(-23);
-        width: 20px;
-        height: 20px;
-        z-index: 1;
-        background-color: transparent;
-        border-top-left-radius: 20px;
-        box-shadow: -1px -10px 0 0 $dark;
+      border: 6px solid $black;
+      left: rem(30);
+      @include breakpoints-up("md") {
+        transition: 0.5s;
       }
     }
   }
@@ -233,43 +221,39 @@
     position: absolute;
     right: 50%;
     transform: translateX(50%);
-    top: rem(80);
-    background-color: $dark;
+    top: rem(70);
     padding: rem(20);
     border-radius: 5px;
     align-items: center;
     z-index: 3;
     width: 100%;
     animation: opac 0.5s linear;
+    background-color: $black;
     .nav__lists {
       width: 100%;
       justify-content: space-around;
       .nav__list {
         height: rem(55);
         width: rem(55);
-        &:nth-child(1).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 0));
-        }
-        &:nth-child(2).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 1));
-        }
-        &:nth-child(3).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 2));
-        }
-        &:nth-child(4).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 3));
-        }
-        &:nth-child(5).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 4));
-        }
-        &:nth-child(6).nav__list--active ~ .nav__indicator {
-          transform: translateX(calc(55px * 5));
+      }
+      .nav__list--active {
+        .nav__link-text {
+          transform: translateY(10px) !important;
         }
         .nav__link-icon {
+          transform: translateY(-28px) !important;
+          background: $primary !important;
+          display: flex !important;
+          justify-content: center;
+          align-items: center;
+          border-radius: 50%;
+          border: 4px solid $black;
+          width: rem(55);
+          height: rem(55);
         }
       }
       .nav__indicator {
-        display: none;
+        display: none !important;
       }
     }
   }
