--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -46,7 +46,7 @@
     }
   }
   .menu--hero__icon {
-    transition: 1s ease-in-out;
+    transition: 0.5s ease-in-out;
     a.active {
       background-color: #d83a34;
       color: #f8f8fb;
@@ -59,4 +59,8 @@
     opacity: 1;
     transform: rotate(calc(360deg / 6 * var(--i)));
   }
+}
+
+#menuBtn {
+  transition: 0.8s ease-in-out;
 }
