finished creating dynamic menu

--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -39,6 +39,16 @@ picture {
   margin-top: 0;
 }
 
+// text balancing
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  text-wrap: balance;
+}
+
 // images
 img,
 picture {
