--- a/app/scss/base/typography.scss
+++ b/app/scss/base/typography.scss
@@ -1,61 +1,55 @@
-@use 'abstract' as *;
+@use "abstract" as *;
 
 @mixin header-underline($top: 28, $width: 50%, $height: 3) {
-    content: "";
-    position: absolute;
-    height: rem($height);
-    background-color: $primary;
-    top: rem($top);
-    width: $width;
-    left: 50%;
-    transform: translateX(-50%);
+  content: "";
+  position: absolute;
+  height: rem($height);
+  background-color: $primary;
+  top: rem($top);
+  width: $width;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 $text-header-sizes: (
-    "h1": $fs-h1,
-    "h2": $fs-h2,
-    "h3": $fs-h3,
-    "h4": $fs-h4,
-    "h5": $fs-h5,
+  "h1": $fs-h1,
+  "h2": $fs-h2,
+  "h3": $fs-h3,
+  "h4": $fs-h4,
+  "h5": $fs-h5,
 );
 
-
-@each $key,
-$value in $text-header-sizes {
-
-    @if($key =="h1") {
-        .h1 {
-            font-size: clamp(3rem, 5vw + 1rem, $value);
-            line-height: 1;
-        }
+@each $key, $value in $text-header-sizes {
+  @if ($key == "h1") {
+    .h1 {
+      font-size: clamp(2rem, 5vw + 1rem, $value);
+      line-height: 1;
     }
+  } @else {
+    .#{$key} {
+      font-size: $value;
 
-    @else {
-        .#{$key} {
-            font-size: $value;
-
-            @include breakpoints-down("small") {
-                font-size: $value - rem(2);
-            }
-        }
+      @include breakpoints-down("small") {
+        font-size: $value - rem(2);
+      }
     }
+  }
 }
 
 .header-underline {
-    position: relative;
+  position: relative;
 
-    &::before {
-        @include header-underline(28, 98%);
-    }
+  &::before {
+    @include header-underline(28, 98%);
+  }
 }
 
 .h2 {
-    .header-underline {
-        position: relative;
+  .header-underline {
+    position: relative;
 
-        &::before {
-            @include header-underline(45, 60%, 5);
-        }
+    &::before {
+      @include header-underline(45, 60%, 5);
     }
-
+  }
 }
