worked on about-me section

--- a/app/scss/layout/_index.scss
+++ b/app/scss/layout/_index.scss
@@ -1,8 +1,8 @@
-@forward 'header';
-@forward 'hero-section';
-@forward 'about-us';
-@forward 'services';
-@forward 'projects';
-@forward 'testimonies';
-@forward 'contact-us';
-@forward 'footer';
+@forward "header";
+@forward "hero-section";
+@forward "about-me";
+@forward "skills";
+@forward "projects";
+@forward "testimonies";
+@forward "contact-us";
+@forward "footer";
