--- a/app/scss/layout/testimonies.scss
+++ b/app/scss/layout/testimonies.scss
@@ -1,70 +1,161 @@
-@use 'abstract' as *;
+@use "abstract" as *;
 
 .testimonies {
+  .testimonies__list {
+    .testimonies__item {
+      position: relative;
+      border-radius: rem(10);
+      overflow: hidden;
 
+      .testimonies__message {
+        background-color: #fff;
+        background-image: url(../assets/images/testimonial/quotation.svg);
+        background-position: top 10px right 45px;
+        background-repeat: no-repeat;
+        background-size: 15%;
+        font-size: rem(16);
+        padding: 30px 20px 10px;
+        position: relative;
+        border-radius: rem(10);
 
-    .testimonies__list {
-        .testimonies__item {
-            position: relative;
-            border-radius: rem(10);
-            overflow: hidden;
-
-            .testimonies__message {
-                background-color: #fff;
-                background-image: url(../assets/images/testimonial/quotation.svg);
-                background-position: top 10px right 45px;
-                background-repeat: no-repeat;
-                background-size: 15%;
-                font-size: rem(16);
-                padding: 30px 20px 10px;
-                position: relative;
-                border-radius: rem(10);
-
-                p {
-                    position: relative;
-                }
-
-                .rating {
-                    position: relative;
-                }
-
-                &::before {
-                    border-radius: inherit;
-                    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, .25);
-                    content: "";
-                    left: 0;
-                    position: absolute;
-                    right: 0;
-                    top: 0;
-                    width: 100%;
-                    bottom: 0;
-                }
-            }
-
-            .testimonies__client {
-                position: relative;
-                margin-top: -13px;
-                display: flex;
-                gap: rem(10);
-                align-items: center;
-                line-height: 1.25;
-
-                .testimonies__client-image {
-                    width: rem(80);
-                    height: rem(80);
-                    border: rem(3) solid $primary;
-                    border-radius: 50%;
-                    overflow: hidden;
-
-                    img {
-                        padding: rem(2);
-                        border-radius: inherit;
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-            }
+        p {
+          position: relative;
         }
+
+        .rating {
+          position: relative;
+        }
+
+        &::before {
+          border-radius: inherit;
+          box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
+          content: "";
+          left: 0;
+          position: absolute;
+          right: 0;
+          top: 0;
+          width: 100%;
+          bottom: 0;
+        }
+      }
+
+      .testimonies__client {
+        position: relative;
+        margin-top: -13px;
+        display: flex;
+        gap: rem(10);
+        align-items: center;
+        line-height: 1.25;
+
+        .testimonies__client-image {
+          width: rem(80);
+          height: rem(80);
+          border: rem(3) solid $primary;
+          border-radius: 50%;
+          overflow: hidden;
+
+          img {
+            padding: rem(2);
+            border-radius: inherit;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+      }
     }
+  }
+}
+
+.projects {
+  display: grid;
+  gap: 1.5rem;
+  grid-auto-columns: 1fr;
+  grid-template-areas:
+    "project1"
+    "project2"
+    "project3"
+    "project4"
+    "project5";
+
+  .project {
+    position: relative;
+    overflow: hidden;
+    border-radius: rem(5);
+    min-height: rem(300);
+    background-color: $dark-gray;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+
+    &:nth-child(1) {
+      grid-area: project1;
+      background-image: url(../assets/images/projects/project1.jpg);
+    }
+
+    &:nth-child(2) {
+      grid-area: project2;
+      background-image: url(../assets/images/projects/project2.jpg);
+    }
+
+    &:nth-child(3) {
+      grid-area: project3;
+      background-image: url(../assets/images/projects/project3.jpg);
+    }
+
+    &:nth-child(4) {
+      grid-area: project4;
+      background-image: url(../assets/images/projects/project4.jpg);
+    }
+
+    &:nth-child(5) {
+      grid-area: project5;
+      background-image: url(../assets/images/projects/project5.jpg);
+    }
+
+    &::after {
+      position: absolute;
+      content: "";
+      inset: 0;
+      background: inherit;
+      transform-origin: center;
+      transition: transform 0.5s ease-in-out;
+    }
+
+    &:hover {
+      &::after {
+        cursor: pointer;
+        transform: scale(1.1);
+      }
+
+      .project__details {
+        background-color: rgba(0, 0, 0, 0.8);
+      }
+    }
+
+    .project__details {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      z-index: 1;
+      color: $white;
+      padding: rem(20);
+      background-color: rgba(0, 0, 0, 0.7);
+    }
+  }
+
+  @include breakpoints-up("md") {
+    grid-template-areas:
+      "project1 project1"
+      "project2 project5"
+      "project3 project5"
+      "project4 project4";
+  }
+
+  @include breakpoints-up("lg") {
+    grid-template-areas:
+      "project1 project1 project1 project2 project2 project5 project5"
+      "project3 project3 project4 project4 project4 project5 project5";
+  }
 }
