--- a/app/scss/layout/hero-section.scss
+++ b/app/scss/layout/hero-section.scss
@@ -21,18 +21,18 @@
   .hero__image--md {
     margin-top: 0;
     @include breakpoints-up("md") {
-      margin-top: 80px;
+      margin-top: rem(80);
     }
     @include breakpoints-up("lg") {
       display: none;
     }
     img {
-      max-width: 200px;
-      max-height: 200px;
+      max-width: rem(200);
+      max-height: rem(200);
       border: 3px solid $primary;
       filter: drop-shadow(-2px 8px 11px $primary);
       background: #2c2c2c;
-      margin-bottom: 10px;
+      margin-bottom: rem(10);
     }
   }
   .hero__text {
@@ -40,7 +40,6 @@
 
     @include breakpoints-up("lg") {
       text-align: left;
-      // max-width: 70%;
     }
   }
 
@@ -52,9 +51,74 @@
   }
 
   .hero__image {
-    max-width: 300px;
+    max-width: rem(300);
     border-radius: 50%;
     z-index: 1000;
     filter: drop-shadow(-2px 8px 11px $primary);
+  }
+
+  .hero-cta__about {
+    display: flex;
+    .hero-cta__hire-icons {
+      position: relative;
+      width: rem(56);
+      height: rem(56);
+      background-color: rgba(216, 58, 52, 0.5);
+      .arrow {
+        height: 0.3rem;
+        opacity: 0;
+        position: absolute;
+        transform: scale(0.2);
+        width: 2rem;
+        left: 15%;
+        top: -8px;
+      }
+      .arrow:nth-child(1) {
+        animation: move-arrow 3s linear 1s infinite;
+      }
+      .arrow:nth-child(2) {
+        animation: move-arrow 3s linear 2s infinite;
+      }
+      .arrow:nth-child(3) {
+        animation: move-arrow 3s linear 3s infinite;
+      }
+      .arrow:before,
+      .arrow:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 50%;
+        background: $light;
+      }
+      .arrow:before {
+        left: 0;
+        transform: skewY(30deg);
+      }
+      .arrow:after {
+        right: 0;
+        width: 50%;
+        transform: skewY(-30deg);
+      }
+      @keyframes move-arrow {
+        25% {
+          opacity: 1;
+        }
+        33.3% {
+          opacity: 1;
+          transform: translateY(2rem);
+        }
+        100% {
+          opacity: 0;
+          transform: translateY(3rem) scale(0.5);
+        }
+      }
+    }
+
+    span {
+      padding: rem(10);
+      font-size: rem(24);
+      background-color: $primary;
+    }
   }
 }
