--- a/app/scss/layout/projects.scss
+++ b/app/scss/layout/projects.scss
@@ -1,110 +1,64 @@
 @use "abstract" as *;
 .projects {
-}
+  .card {
+    height: 300px;
+    width: 400px;
+    color: white;
+    display: flex;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+    background-size: cover;
+  }
 
-figure.snip1200 {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  background: $dark;
-  color: #ffffff;
-  text-align: center;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
-  font-size: 16px;
-}
-figure.snip1200 * {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  -webkit-transition: all 0.45s ease-in-out;
-  transition: all 0.45s ease-in-out;
-}
-figure.snip1200 img {
-  max-width: 100%;
-  position: relative;
-  opacity: 0.9;
-}
-figure.snip1200 figcaption {
-  position: absolute;
-  top: 45%;
-  left: 7%;
-  right: 7%;
-  bottom: 45%;
-  border: 1px solid $light;
-  border-width: 1px 1px 0;
-  opacity: 0;
-}
-figure.snip1200 .heading {
-  overflow: hidden;
-  -webkit-transform: translateY(50%);
-  transform: translateY(50%);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-}
-figure.snip1200 h2 {
-  display: table;
-  margin: 0 auto;
-  padding: 0 10px;
-  position: relative;
-  text-align: center;
-  width: auto;
-  text-transform: uppercase;
-  font-weight: 400;
-}
-figure.snip1200 h2 span {
-  font-weight: 800;
-}
-figure.snip1200 h2:before,
-figure.snip1200 h2:after {
-  position: absolute;
-  display: block;
-  width: 1000%;
-  height: 1px;
-  content: "";
-  background: white;
-  top: 50%;
-}
-figure.snip1200 h2:before {
-  left: -1000%;
-}
-figure.snip1200 h2:after {
-  right: -1000%;
-}
-figure.snip1200 p {
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  position: absolute;
-  width: 100%;
-  padding: 0 20px;
-  margin: 0;
-  opacity: 0;
-  line-height: 1.6em;
-  font-size: 0.9em;
-}
-figure.snip1200 a {
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  z-index: 1;
-}
-figure.snip1200:hover img,
-figure.snip1200.hover img {
-  opacity: 0.1;
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
-}
-figure.snip1200:hover figcaption,
-figure.snip1200.hover figcaption {
-  opacity: 1;
-  top: 7%;
-  bottom: 7%;
-}
-figure.snip1200:hover p,
-figure.snip1200.hover p {
-  opacity: 1;
-  -webkit-transition-delay: 0.35s;
-  transition-delay: 0.35s;
+  .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(216, 58, 52, 0.8);
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: all 0.3s ease;
+  }
+
+  .content * {
+    transform: translateY(-70%);
+    transition: all 0.3s ease;
+    opacity: 0;
+  }
+
+  .content h2 {
+    font-size: 35px;
+    margin: 15px;
+    font-weight: 700;
+  }
+
+  .content h3 {
+    font-size: 23px;
+    text-transform: uppercase;
+  }
+
+  .card:hover .content {
+    opacity: 1;
+  }
+
+  .card:hover .content * {
+    opacity: 1;
+    transform: translateY(0);
+  }
+
+  .card:nth-child(1) {
+    background-image: url("/assets/images/projects/we-construct.png");
+  }
+  .card:nth-child(2) {
+    background-image: url("/assets/images/projects/search-country.jpg");
+  }
+  .card:nth-child(3) {
+    background-image: url("/assets/images/projects/invoice-app.jpg");
+  }
+  .card:nth-child(4) {
+    background-image: url("/assets/images/projects/barcode-finder.png");
+  }
 }
