--- a/app/scss/components/buttons.scss
+++ b/app/scss/components/buttons.scss
@@ -1,61 +1,39 @@
-@use 'abstract' as *;
+@use "abstract" as *;
 
 @mixin btn($bg-color: #e2e2e2) {
-    text-decoration: none;
-    cursor: pointer;
-    // display: inline-block;
-    border: 0;
-    padding: $base-padding $base-padding *2;
-    border-radius: $base-border-radius;
-    background-color: $bg-color;
+  text-decoration: none;
+  cursor: pointer;
+  // display: inline-block;
+  border: 0;
+  padding: $base-padding $base-padding * 2;
+  border-radius: $base-border-radius;
+  background-color: $bg-color;
 }
 
 .btn {
-    @include btn;
+  @include btn;
 }
 
-@each $key,
-$value in $colors {
-    .btn-#{$key} {
-        @include btn($value);
+@each $key, $value in $colors {
+  .btn-#{$key} {
+    transition: all 0.5s ease-in-out;
+    @include btn($value);
 
-        &:hover {
-            outline: $base-border-thickness solid $value;
-            background-color: lighten($value, 10);
-        }
+    &:hover {
+      //   outline: $base-border-thickness solid $value;
+      background-color: lighten($value, 10);
     }
+  }
 
-    .btn-outline-#{$key} {
-        @include btn(transparent);
-        border: $base-border-thickness solid $value;
-        background-color: transparent;
-        color: $value;
-        &:hover {
-            background-color: $value;
-            color: $white;
-        }
+  .btn-outline-#{$key} {
+    @include btn(transparent);
+    border: $base-border-thickness solid $value;
+    background-color: transparent;
+    color: $value;
+    transition: all 0.3s ease-in-out;
+    &:hover {
+      background-color: $value;
+      color: $white;
     }
-
-}
-
-// fab button
-.fab-button {
-    display: none;
-    right: rem(5);
-    bottom: rem(20);
-    height: rem(40);
-    width: rem(40);
-    font-size: rem(20);
-    border-width: rem(3);
-    z-index: 120;
-    animation: opac 300ms ease-in-out forwards;
-
-    @include breakpoints-up("md") {
-
-        right: rem(20);
-        bottom: rem(20);
-        height: rem(60);
-        width: rem(60);
-        font-size: rem(30);
-    }
+  }
 }
