--- a/app/scss/layout/projects.scss
+++ b/app/scss/layout/projects.scss
@@ -1,64 +1,87 @@
 @use "abstract" as *;
 .projects {
-  .card {
-    height: 300px;
-    width: 400px;
-    color: white;
-    display: flex;
-    position: relative;
-    cursor: pointer;
-    overflow: hidden;
-    background-size: cover;
-  }
+  .project {
+    transition: all 0.3s ease-in-out;
+    &:nth-child(1) {
+      .card {
+        background-image: url("/assets/images/projects/we-construct.png");
+      }
+    }
+    &:nth-child(2) {
+      .card {
+        background-image: url("/assets/images/projects/search-country.jpg");
+      }
+    }
+    &:nth-child(3) {
+      .card {
+        background-image: url("/assets/images/projects/invoice-app.jpg");
+      }
+    }
+    &:nth-child(4) {
+      .card {
+        background-image: url("/assets/images/projects/barcode-finder.png");
+      }
+    }
 
-  .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(216, 58, 52, 0.8);
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: all 0.3s ease;
-  }
+    &:hover {
+      .card {
+        scale: 1.05;
+      }
+      .content {
+        opacity: 1;
+      }
+      .content * {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+    .card {
+      height: rem(300);
+      max-width: rem(400);
+      min-width: rem(270);
+      color: $light;
+      display: flex;
+      position: relative;
+      overflow: hidden;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: 95%;
+      transition: all 0.3s ease-in-out;
+      @include breakpoints-up("md") {
+        background-position: none;
+        // background-size: cover;
+      }
+    }
 
-  .content * {
-    transform: translateY(-70%);
-    transition: all 0.3s ease;
-    opacity: 0;
-  }
+    .content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(216, 58, 52, 0.9);
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: all 0.3s ease;
+    }
 
-  .content h2 {
-    font-size: 35px;
-    margin: 15px;
-    font-weight: 700;
-  }
+    .content * {
+      transform: translateY(-70%);
+      transition: all 0.3s ease;
+      opacity: 0;
+    }
 
-  .content h3 {
-    font-size: 23px;
-    text-transform: uppercase;
-  }
-
-  .card:hover .content {
-    opacity: 1;
-  }
-
-  .card:hover .content * {
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-  .card:nth-child(1) {
-    background-image: url("/assets/images/projects/we-construct.png");
-  }
-  .card:nth-child(2) {
-    background-image: url("/assets/images/projects/search-country.jpg");
-  }
-  .card:nth-child(3) {
-    background-image: url("/assets/images/projects/invoice-app.jpg");
-  }
-  .card:nth-child(4) {
-    background-image: url("/assets/images/projects/barcode-finder.png");
+    .project__description {
+      .project__stack {
+        background-color: $dark;
+        width: rem(40);
+        height: rem(40);
+        border: 1px solid;
+        font-size: rem(20);
+        border-radius: 50%;
+        color: $light;
+      }
+    }
   }
 }
