working on contact-me section

--- a/app/scss/abstract/variables.scss
+++ b/app/scss/abstract/variables.scss
@@ -6,9 +6,9 @@ $secondary: #22cccc !default;
 $error: #f42f2f !default;
 $dark-gray: #5e5c47 !default;
 $dark: #1e1b1c !default;
-$light: #edeee8 !default;
+$light: #e1e1e1 !default;
 $black: #2c2c2c !default;
-$white: #f8f8fb !default;
+$white: #e7e7eb !default;
 
 /** Font Family  */
 $ff-sans-serif: "Poppins", sans-serif;
