--- a/app/scss/components/swiper.scss
+++ b/app/scss/components/swiper.scss
@@ -1,54 +1,53 @@
-@use 'abstract' as *;
+@use "abstract" as *;
 
 .swiper {
-    padding: 2em 1em;
+  padding: 2em 1em;
 
+  @include breakpoints-up("md") {
+    padding: 2em;
+  }
 
-    @include breakpoints-up("md") {
-        padding: 2em;
-    }
+  @include breakpoints-up("lg") {
+    padding: 4em;
+  }
+
+  .swiper-button-next {
+    display: none;
 
     @include breakpoints-up("lg") {
-        padding: 4em;
+      display: block;
     }
+  }
 
-    .swiper-button-next {
-        display: none;
+  .swiper-button-prev {
+    display: none;
 
-        @include breakpoints-up("lg") {
-            display: block;
-        }
+    @include breakpoints-up("lg") {
+      display: block;
     }
+  }
 
-    .swiper-button-prev {
-        display: none;
+  .swiper-navBtn {
+    transition: all 0.3s ease-in-out;
 
-        @include breakpoints-up("lg") {
-            display: block;
-        }
+    &:hover {
+      color: $primary;
     }
+  }
 
-    .swiper-navBtn {
-        transition: all 0.3s ease-in-out;
+  .swiper-pagination-bullet {
+    height: rem(12);
+    width: rem(12);
+    background-color: $primary;
+    opacity: 0.7;
 
-        &:hover {
-            color: $secondary;
-        }
+    &:hover {
+      color: $primary;
     }
+  }
 
-    .swiper-pagination-bullet {
-        height: rem(12);
-        width: rem(12);
-        background-color: $secondary;
-        opacity: .7;
-
-        &:hover {
-            color: $primary;
-        }
-    }
-
-    .swiper-pagination-bullet-active {
-        opacity: 1;
-        background-color: darken($secondary, 5%);
-    }
+  .swiper-pagination-bullet-active {
+    opacity: 1;
+    background-color: darken($primary, 5%);
+  }
 }
