--- a/app/scss/layout/_index.scss
+++ b/app/scss/layout/_index.scss
@@ -4,5 +4,5 @@
 @forward "skills";
 @forward "projects";
 @forward "testimonies";
-@forward "contact-us";
+@forward "contact-me";
 @forward "footer";
