--- a/app/scss/layout/projects.scss
+++ b/app/scss/layout/projects.scss
@@ -20,6 +20,7 @@
     &:nth-child(4) {
       .card {
         background-image: url("/assets/images/projects/barcode-finder.png");
+        background-size: 80%;
       }
     }
 
@@ -37,8 +38,8 @@
     }
     .card {
       height: rem(300);
-      max-width: rem(400);
       min-width: rem(270);
+      width: 100%;
       color: $light;
       display: flex;
       position: relative;
@@ -48,10 +49,6 @@
       background-position: center center;
       background-size: 95%;
       transition: all 0.3s ease-in-out;
-      @include breakpoints-up("md") {
-        background-position: none;
-        // background-size: cover;
-      }
     }
 
     .content {
