--- a/app/scss/utilities/container.scss
+++ b/app/scss/utilities/container.scss
@@ -1,7 +1,6 @@
-@use 'abstract' as *;
+@use "abstract" as *;
 
 .container {
-    max-width: min(90%, 1100px);
-    margin-inline: auto;
-    padding-inline: rem(20);
+  max-width: min(90%, 1100px);
+  margin-inline: auto;
 }
