adjust images file

--- a/app/scss/layout/hero-section.scss
+++ b/app/scss/layout/hero-section.scss
@@ -7,7 +7,7 @@
   height: 100%;
   display: flex;
   justify-content: flex-end;
-  background: url(./assets/images/hero-section/background-stars.svg);
+  background: url(../assets/images/hero-section/background-stars.svg);
   background-color: $black;
   align-items: center;
   .hero-cta {
