fiexed skills background-image

--- a/app/scss/layout/skills.scss
+++ b/app/scss/layout/skills.scss
@@ -1,3 +1,3 @@
 .skills {
-  background-image: url(./assets/images/hero-section/background-stars.svg);
+  background-image: url(../assets/images/hero-section/background-stars.svg);
 }
