--- a/app/scss/components/menu.scss
+++ b/app/scss/components/menu.scss
@@ -38,7 +38,7 @@
     filter: drop-shadow(-2px 8px 11px $primary);
     left: 0;
     opacity: 0;
-
+    z-index: -1;
     a {
       width: 60px;
       height: 60px;
