--- a/app/scss/components/_index.scss
+++ b/app/scss/components/_index.scss
@@ -1,7 +1,8 @@
-@forward 'card';
-@forward 'navbar';
-@forward 'buttons';
-@forward 'swiper';
-@forward 'form';
-@forward 'toaster';
-@forward 'menu';
+@forward "card";
+@forward "navbar";
+@forward "buttons";
+@forward "swiper";
+@forward "form";
+@forward "toaster";
+@forward "menu";
+@forward "tooltip";
